# media_gateway

./: Cargo.toml  README.md
scripts/: hf_processor_sidecar.py
src/: app.rs  config.rs  error.rs  hf_sidecar.rs  main.rs  media.rs  models.rs  pipeline.rs
src/preprocess_ops/: image.rs  video.rs
tests/: e2e.rs
