[package]
name = "media_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.9"
base64 = "0.22.1"
http = "1.3.1"
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "webp"] }
metrics = "0.22.3"
metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = ["http-listener"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "=2.4.1"
